# MicroMetaApp-Omero

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  deploy_build.cmd  deploy_build.sh  gulpfile.js  main.yml  omero_microscopyMetadataTool.rar  package-lock.json  package.json  pyproject.toml  removed_from_package.txt  setup.py  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
omero_microMetaApp/: __init__.py  apps.py  setup.py  urls.py  views.py
omero_microMetaApp/templates/microMetaAppOmero/: index.html
omero_microscopyMetadataTool/: __init__.py  apps.py  urls.py  views.py
omero_microscopyMetadataTool/templates/microscopyMetadataTool/: index.html
public/: index.html  style.css
src/: app.js
